--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Adds Skipper",
   "version": "1.0",
+  "author": "Tivaty",
   "description":"This is a chrome addon that detect adds in YT video and mute sound. Then it detect skip adds button and click.",
   "permissions": ["activeTab"],
   "background": {
